# latex2Mathematica

./: LICENSE.txt  README.md  TODO.txt  latex.janet  pyproject.toml  repl.sh  setup.cfg
src/latex2Mathematica/: ast.py
