[project]
name = "latex2mathematica"
description = "Converts Latex-formatted Math to Mathematica-style expressions"
readme = "README.md"
requires-python = ">=3.9"
# TODO: license, classifiers
dependencies = [
    "click"
]

[build-system]
requires = [
  "setuptools >= 40.9.0",
]
build-backend = "setuptools.build_meta"

